--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
           <a href="#" class="header__logo">
             <img src="./img/logo.svg" width="154" alt="Веломагазин" class="logo" />
           </a>
+          <a href="#" class="header__span">
           <span class="header__text">WILDLIFE</span>
+          </a>
         </div>
         
 
@@ -130,7 +132,9 @@
         <a href="#" class="header__logo">
           <img src="./img/logo.svg" width="154" alt="Веломагазин" class="logo" />
         </a>
+        <a href="#" class="header__span">
         <span class="header__text">WILDLIFE</span>
+        </a>
       </div>
     
       <nav class="footer__nav">
